--- a/src/server/net/CMakeLists.txt
+++ b/src/server/net/CMakeLists.txt
@@ -1,7 +1,8 @@
 cmake_minimum_required(VERSION 3.20)
-project(moonDB)
+project(kvDB)
 
 set(CMAKE_CXX_STANDARD 14)
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pthread")
 
 aux_source_directory(. NET_SRCS)
 
