--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,9 +2,6 @@ cmake_minimum_required(VERSION 3.20)
 project(kvDB)
 
 set(CMAKE_CXX_STANDARD 14)
-
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pthread")
 
-
-add_subdirectory(src/server/net)
-add_subdirectory(src/server/db)
+add_subdirectory(src/server)
